kube-config/converter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: converter
  template:
    metadata:
      name: converter
      labels:
        components: converter
    spec:
      containers:
        - name: converter
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 500Mi
              cpu: 200m
          volumeMounts:
            - name: test
              mountPath: /etc/test
              readOnly: true
          livenessProbe:
            exec:
              command:
                - curl
                - --fail
                - http://localhost:3000/api
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 1
          startupProbe:
            exec:
              command:
                - curl
                - --fail
                - http://localhost:3000/api
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - curl
                - --fail
                - http://localhost:3000/api
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: test
          configMap:
            name: demo-config
