kube-config/converter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: converter-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 3200
      protocol: TCP
  selector:
    components: converter
